--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<a id="fckoff" href="battlegrid.html"></a>
 </body>
 <script>
-	document.getElementById('fckoff').click
+	document.getElementById('fckoff').click()
 </script>
 </html>
